@@ -1,7 +1,4 @@
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.math.BigInteger;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -16,32 +13,38 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class MD5 {
-    private String fileDir;
-    private int treadsAmount;
+    private String directory;
+    private int threadsAmount;
 
-    public MD5(String fileDir, int treadsAmount) {
-        this.fileDir = fileDir;
-        this.treadsAmount = treadsAmount;
+    public MD5(String directory, int threadsAmount) {
+        this.directory = directory;
+        this.threadsAmount = threadsAmount;
     }
 
     public List<String> getListFromPath() {
-        Path path = Paths.get(fileDir);
+        Path path = Paths.get(directory);
         try (Stream<Path> walk = Files.walk(path)) {
             return walk
                     .filter(Files::isRegularFile)
                     .map(Path::toFile)
-                    .map(File::getAbsolutePath)
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new RuntimeException("Could not read files for path " + path);
+                    .map(f -> {
+                        try {
+                            return f.getCanonicalPath();
+                        } catch (IOException e) {
+                            throw new UncheckedIOException(e);
+                        }
+                    })
+                    .toList();
+        } catch (IOException ioe) {
+            throw new UncheckedIOException("Could not read files for path " + path, ioe);
         }
     }
 
-    public String getMd5(String fileAbsolutePath) throws NoSuchAlgorithmException, IOException {
+    public String getMd5(String file) throws NoSuchAlgorithmException, IOException {
         int nRead = 0;
         byte[] buffer = new byte[1024 * 1024];
         MessageDigest md5 = MessageDigest.getInstance("MD5");
-        try (InputStream in = new FileInputStream(fileAbsolutePath)) {
+        try (InputStream in = new FileInputStream(file)) {
             while ((nRead = in.read(buffer)) != -1) {
                 md5.update(buffer, 0, nRead);
             }
@@ -49,9 +52,9 @@ public class MD5 {
         return new BigInteger(1, md5.digest()).toString(16);
     }
 
-    public  void printMd5DirTree() throws InterruptedException {
+    public void printMd5DirTree() throws InterruptedException {
         List<String> files = getListFromPath();
-        ExecutorService executorService = Executors.newFixedThreadPool(treadsAmount);
+        ExecutorService executorService = Executors.newFixedThreadPool(threadsAmount);
         //sleep 2 day
         CountDownLatch latch = new CountDownLatch(files.size());
 
@@ -76,8 +79,8 @@ public class MD5 {
     }
 
     private class Lock {
-        private int total;
         private final Object internalLock = new Object();
+        private int total;
 
         public Lock(int total) {
             if (total < 0) {
@@ -91,7 +94,7 @@ public class MD5 {
                 if (total > 0) {
                     total--;
                 }
-                if (total == 0){
+                if (total == 0) {
                     internalLock.notifyAll();
                 }
             }
@@ -99,12 +102,10 @@ public class MD5 {
 
         public void waitZero() throws InterruptedException {
             synchronized (internalLock) {
-                while (total > 0){
+                while (total > 0) {
                     internalLock.wait();
                 }
             }
         }
     }
 }
-
-//E:\My\work\Java
